--- a/quizz.html
+++ b/quizz.html
@@ -211,6 +211,42 @@
           question: "Qui a chanté ? 'T'aimer sur les bords du lac, ton coeur sur mon corps qui respire, pourvu que les hommes nous regardent, amoureux de l'ombre et du pire'",
           answer: "Julien Doré"
       },
+         {
+          question: "Qui a chanté ? 'T'aimer sur les bords du lac, ton coeur sur mon corps qui respire, pourvu que les hommes nous regardent, amoureux de l'ombre et du pire'",
+          answer: "Julien Doré"
+      },
+      {
+          question: " Suite de lettres et de chiffres : 54 48 42 ? …… 30 24",
+          answer: "36"
+      },
+       {
+          question: " Suite de lettres et de chiffres  : A B D G K ? ……  ",
+          answer: "P"
+      },
+       { 
+          question: " Ensemble de 500 feuilles de papier / pagaye …………………………………… ( E A M R )   ",
+          answer: "RAME"
+      },
+      { 
+          question: " Reconstituer le mot manquant  : Support mural sur lequel on écrit / Ce qui s’offre à la vue et provoque une réaction    ( U T A B A E L )   ",
+          answer: "TABLEAU"
+      },
+      { 
+          question: " Reconstituer le mot manquant  : Grade dans l’armée / qui concerne la majorité   ( A É R É L N G )    ",
+          answer: "GENERAL"
+      },
+       { 
+          question: " Reconstituer le mot manquant  :  Ancienne assemblée politique / régime…………………………………… ( D E E I T )    ",
+          answer: "DIETE"
+      },
+      { 
+          question: " Reconstituer le mot manquant  : Domaine agricole / qui offre une certaine résistance à la pression …………………………… ( R M E E F )   ",
+          answer: "FERME"
+      },
+        { 
+          question: " Reconstituer le mot manquant  : Militaire / saucisse sèche et plate …………………………………… ( E R E M N G D A ) ",
+          answer: "GENDARME"
+      },
       {
 
           question: " Qui a gagné le prix Goncourt 2016 ?",
