--- a/quizz.html
+++ b/quizz.html
@@ -125,7 +125,7 @@
       },
       {
           question: "Quelle est la signification du sigle SQL ?",
-          answer: "simple query language"
+          answer: " Structured Query Language"
       },
 
       {
