--- a/quizz.html
+++ b/quizz.html
@@ -321,7 +321,7 @@
                 questionListPleasurenum++;
             }
 
-            //$("#reponse").hide();
+            $("#reponse").hide();
             qnum++;
 
         })
