--- a/quizz.html
+++ b/quizz.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <script src="dbquestion.js"></script>
+  
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
@@ -29,7 +31,7 @@
         }
 
         .jumbotron {
-            height: 70vh;
+            height: 60vh;
         }
     </style>
 </head>
@@ -109,174 +111,6 @@
         return array;
     }
 
-var questionListTec = [
-    {
-        question: 'Que retourne l’expression (Johanna.color == “Red”)?“Pompette”:“Ça va”   ? ',
-        answer: "42"
-    },
-    {
-        question: "Quelle est la différence entre les delegates ACTION et FUNC ?",
-        answer: "Action n’a pas de retour alors que func en a un (comme le Brexit) "
-    },
-    {
-        question: "Que retourne l’expression suivante ? ",
-        answer: "true"
-    },
-    {
-        question: "Comment appelle-t-on le type d'écriture suivant : X => X.LENGTH == 12 ?",
-        answer: " Une expression lambda"
-    },
-
-    {
-        question: "Quel sera le résultat de cette opération : var result = 2/3 ? ",
-        answer: "Résultat de type int et de valeur 0"
-    },
-    {
-        question: "En C#, comment éviter le recours aux séquences d'échappement en affectant une valeur à une variable ? ",
-        answer: " En utilisant un @ comme : string s = @”Pas d’échappement. (ou en ne faisant pas de C#)"
-    },
-    {
-        question: "Quel est l’équivalent SQL Server de l’opérateur C# “??” ?",
-        answer: "la fonction ISNULL()"
-    },
-    {
-        question: "En css, que faire pour que mon texte soit en majuscule, que dois-écrire: text-transform:... ",
-        answer: "uppercase"
-    },
- {
-        question: "En css, que fare pour que mon seul la première lettre de chaque mon de mon texte soit en majuscule, que dois-écrire: text-transform:... ",
-        answer: "capitalize"
-    },
-    {
-        question: "En ECMAScript 5, existe-t'il des Getters et des Setters pour JS ? ",
-        answer: "Seules les méthodes qui sont dans la même classe que la méthode en question"
-    },
-    {
-        question: " En quel language dois-je programmer pour faire une application dites native sur Android ? ",
-        answer: "JAVA "
-    },
-    {
-        question: "var arr2=arr1; var arr1=[0,1,2];  arr1[0]=5; Quelle est la valeur de arr2[0] ? ",
-        answer: "5"
-    },
-
-];
-
-var questionListPleasure = [
-    {
-        question: "Quel est le composant dans la baguette d’Harry Potter ? ",
-        answer: "Une plume de phenix"
-    },
-    {
-        question: "Dans Doctor Who, comment s’appelle le vaisseau du Docteur ? ",
-        answer: "le Tardis"
-    },
-    {
-
-        question: "Que signifie TARDIS ? ",
-        answer: "VO : Time And Relative Dimension In Space - VF : Temps À Relativité Dimensionnelle Inter Spatiale"
-    },
-    {
-        question: "Qui sont Dick Grayson, Jason Todd et Tim Drake ? ",
-        answer: "Les 3 premiers Robin de Batman"
-    },
-    {
-        question: "Dans le film “Moulin Rouge”, quelle chanson de Police est reprise en version tango ?  ",
-        answer: "Roxanne"
-    },
-    {
-        question: "Quel est le plus long fleuve de France ?",
-        answer: "La Loire (~1012 km)"
-    },
-    {
-
-        question: "Terminez cette réplique \"Il dit qu'il a plus de genoux.\" ",
-        answer: "Il dit qu'il voit pas le rapport"
-    },
-    {
-        question: "Quel acteur joue dans les films Thor, Avengers, et Kong Skull Island ? ",
-        answer: "Tom Hiddleston"
-    },
-
-    {
-        question: "Qui sont les acteurs principaux du film “La La Land” ? ",
-        answer: "Ryan Gosling et Emma Stone"
-    },
-    {
-        question: "Qui a remporté le dernier match amical France-Espagne ? ",
-        answer: "Espagne (0-2)"
-    },
-    {
-        question: "Quelle est la capital du Boutan ?",
-        answer: "Thimphou"
-    },
-
-    {
-        question: "Quelle chanson commence par ces mots: 'Je marche vers les ténèbres Vers l'horizon funeste Mais la vie qui m'entoure et me baigne",
-        answer: "Bleu Noir de Mylène Farmer"
-    },
-    {
-        question: " Suite de lettres et de chiffres : 54 48 42 ? …… 30 24",
-        answer: "36"
-    },
-    {
-        question: "Comment appelle t'on un SSII aujourd'hui ? ",
-        answer: "ESN"
-    },
-    {
-        question: " Si je commence une phrase par \"j'éspère que...\" puis je terminer par un point d'interogation ?  ",
-        answer: "Non"
-    },
-    {
-        question: " Comment se prononce le nom de famille de cet IdiCollab : Nicolas Millon  ? ",
-        answer: "Il faut dire les 2 L"
-    },
-    {
-        question: " En quelle année est née MMA ?  ",
-        answer: "GENERAL"
-    },
-    {
-        question: " En France, selon Stackoverflow, quel language permet d'obtenir le meilleur salaire en moyenne ?  ",
-        answer: "Python"
-    },
-    {
-        question: " Reconstituer le mot manquant  : Domaine agricole / qui offre une certaine résistance à la pression …………………………… ( R M E E F )   ",
-        answer: "FERME"
-    },
-    {
-        question: " Reconstituer le mot manquant  : Militaire / saucisse sèche et plate …………………………………… ( E R E M N G D A ) ",
-        answer: "GENDARME"
-    },
-    {
-
-        question: " Qui a gagné le prix Goncourt 2016 ?",
-        answer: "Catherine Cusset "
-    },
-    {
-
-        question: "En quelle année a été crée Idigao ?",
-        answer: "04 novembre 2005 "
-    },
-    {
-
-        question: "Comment s'appelle le pdg de Microsoft ?",
-        answer: "Satya Nadella "
-    },
-    {
-
-        question: "Comment s'appelle le pdg de Blackberry ?",
-        answer: "John S. Chen "
-    },
-    {
-
-        question: "Comment s'appelle le candidat représentant les Verts à l'élection présidentiel ?",
-        answer: "Yannick Jadot"
-    },
-
-
-
-
-];
     function Check(score, team) {
         if (score > 14) {
             $("#congratulation #teamname").text(team);
